# RustFrontend

./: .gitignore  Cargo.toml  README.md  index.html
DataAggregatorBackend/: Cargo.toml  tx_hash.txt
DataAggregatorBackend/src/: main.rs
MiddlewareBackend/: Cargo.toml  crud.db
MiddlewareBackend/migrations/2022-10-01-222355_nft/: down.sql  up.sql
MiddlewareBackend/src/: lib.rs  main.rs  routes.rs  schema.rs  types.rs
frontEnd/: Cargo.toml  README.md
frontEnd/src/: app.rs  index.rs  queries.rs  queryCard.rs
frontEnd/src/full/: mod.rs
frontEnd/src/layouts/: mod.rs
src/: Card.rs  app.rs  counter.rs  index.rs  main.rs  queries.rs  queryCard.rs  sendersPiechart.html
