[package]
name = "hackathon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1", features = ["full"] }
hex-literal = "0.3.4"
toml = "0.5.9"
anyhow = "1.0.0"
serde_derive = "1.0.145"
serde = "1.0.0"
ethereum_abi = "0.4.0"
serde_json = "1.0.85"
hex = "0.4.3"